--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -169,5 +169,11 @@ form#search_form_header {
     bottom: -32px;
 
 }
+.rotate180{
+    -webkit-transform: rotate(-180deg);
+    -moz-transform: rotate(-180deg);
+    -ms-transform: rotate(-180deg);
+    -o-transform: rotate(-180deg);
+}
 
 
