--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -237,4 +237,50 @@ searching
     cursor: pointer;
 }
 
+.checkbox {
+    position: relative;
+    z-index: -1;
+    opacity: 0;
+
+}
+.checkbox + label {
+    position: relative;
+    cursor: pointer;
+}
+.checkbox + label:before {
+    content: '';
+    position: absolute;
+    top: -4px;
+    left: 0;
+    width: 50px;
+    height: 26px;
+    border-radius: 13px;
+    background: #CDD1DA;
+    box-shadow: inset 0 2px 3px rgba(0,0,0,.4);
+    transition: .2s;
+}
+.checkbox + label:after {
+    content: '';
+    position: absolute;
+    top: -2px;
+    left: 2px;
+    width: 22px;
+    height: 22px;
+    border-radius: 10px;
+    background: #FFF;
+    box-shadow: 0 2px 5px rgba(0,0,0,.4);
+    transition: .2s;
+}
+.checkbox:checked + label:before {
+    background: #ff0000;
+}
+.checkbox:checked + label:after {
+    left: 26px;
+}
+.checkbox + label {
+    position: relative;
+    padding: 0 0 0 60px;
+    cursor: pointer;
+}
+
 
